--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "version": "1.0.0",
     "private": true,
     "main": "src/main.ts",
-    "author": "picturee",
+    "author": "kfc",
     "scripts": {
         "build": "tsc",
         "start": "node build/main.js",
